nextcloud/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: mariadb
          image: mariadb:lts
          args:
            - --transaction-isolation=READ-COMMITTED
            - --binlog-format=ROW
          ports:
            - name: mysql
              containerPort: 3306
          readinessProbe:
            exec:
              command: ["sh", "-c", "mariadb-admin ping -h 127.0.0.1 -u root -p\"$MARIADB_ROOT_PASSWORD\""]
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
          volumeMounts:
            - name: database
              mountPath: /var/lib/mysql
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: nextcloud-mariadb
