nextcloud/nextcloud-ingress.yaml
# Nextcloud at https://nas.home.datalab.gg via Tailscale -> Traefik.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: nextcloud-nextcloud-headers@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: nas.home.datalab.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
  tls:
    - hosts:
        - nas.home.datalab.gg
